infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1 # 1개의 이미지에 대해 1개 pod을 생성
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: hyeongeol/msa-comments # docker hub에 등록된 이미지
          imagePullPolicy: IfNotPresent # docker hub에 없는 경우 로컬
---
apiVersion: v1
kind: Service
metadata:
  name: comment-cluster-srv
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001 # nodePort
      targetPort: 4001
