infra/k8s/moderations-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderations-depl
spec:
  replicas: 1 # 1개의 이미지에 대해 1개 pod을 생성
  selector:
    matchLabels:
      app: moderations
  template:
    metadata:
      labels:
        app: moderations
    spec:
      containers:
        - name: moderations
          image: hyeongeol/msa-moderations # docker hub에 등록된 이미지
          imagePullPolicy: IfNotPresent # docker hub에 없는 경우 로컬
---
apiVersion: v1
kind: Service
metadata:
  name: moderations-cluster-srv
spec:
  selector:
    app: moderations
  ports:
    - name: moderations
      protocol: TCP
      port: 4003 # nodePort
      targetPort: 4003
