infra/k8s/queries-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queries-depl
spec:
  replicas: 1 # 1개의 이미지에 대해 1개 pod을 생성
  selector:
    matchLabels:
      app: queries
  template:
    metadata:
      labels:
        app: queries
    spec:
      containers:
        - name: queries
          image: hyeongeol/msa-queries # docker hub에 등록된 이미지
          imagePullPolicy: IfNotPresent # docker hub에 없는 경우 로컬
---
apiVersion: v1
kind: Service
metadata:
  name: queries-cluster-srv
spec:
  selector:
    app: queries
  ports:
    - name: queries
      protocol: TCP
      port: 4002 # nodePort
      targetPort: 4002
