infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true" ## 모든 경로에서 정규표현식을 쓸 수 있다.
spec:
  ingressClassName: nginx
  rules:
    - host: posts.com
      http:
        paths:
        - path: /posts/create
          pathType: Prefix
          backend:
            service:
              name: posts-clusterip-srv
              port:
                number: 4000
        - path: /posts
          pathType: Prefix
          backend:
            service:
              name: queries-srv
              port:
                number: 4002
        - path: /posts/?(.*)/comments
          pathType: ImplementationSpecific
          backend:
            service:
              name: comments-srv
              port:
                number: 4001
        - path: /?(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: client-srv
              port:
                number: 3000
